origami-wasabi-3 new post route to go straight to gallery

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -55,7 +55,7 @@
             <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Upload</h2>
 
 
-            <form enctype='multipart/form-data' method="POST" action="/origami/image" class="my-6"
+            <form enctype='multipart/form-data' method="POST" action="/origami/form" class="my-6"
                   x-data="{ files1: null, files2 : null }">
 
                 <label class="border-2 border-gray-200 p-3 w-full block rounded cursor-pointer my-2"
