Sample in index.html file is wrong #7 -> remove curl example

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -47,11 +47,11 @@
             <h1 x-data="{ message: 'I ❤️ Wasabi' }" x-text="message"></h1>
             <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Gallery</h2>
             <a href="/origami/view">Link</a>
-            <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Curl</h2>
-            <pre><code>curl \
-  -F "data=@filter.edn" \
-  -F "data=@media.jpg" \
-  http://wasabi.hellonico.info/origami/image > hello.png</code></pre>
+<!--            <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Curl</h2>-->
+<!--            <pre><code>curl \-->
+<!--  -F "data=@filter.edn" \-->
+<!--  -F "data=@media.jpg" \-->
+<!--  http://wasabi.hellonico.info/origami/image > hello.png</code></pre>-->
             <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Upload</h2>
 
 
