--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,21 +9,21 @@
     <meta name="author" content="Nicolas Modrzyk">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.7.0/alpine.js"
-            type="application/javascript"></script>
+        type="application/javascript"></script>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-            integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-            crossorigin="anonymous"></script>
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-            integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-            crossorigin="anonymous"></script>
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,47 +37,48 @@
 </head>
 
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-4">
-            <img src="/static/wasabi.png" alt="wasabi"/>
-        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <img src="/static/wasabi.png" alt="wasabi" />
+            </div>
 
-        <div class="col">
+            <div class="col">
 
-            <h1 x-data="{ message: 'I ❤️ Wasabi' }" x-text="message"></h1>
-            <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Gallery</h2>
-            <a href="/origami/view">Link</a>
-<!--            <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Curl</h2>-->
-<!--            <pre><code>curl \-->
-<!--  -F "data=@filter.edn" \-->
-<!--  -F "data=@media.jpg" \-->
-<!--  http://wasabi.hellonico.info/origami/image > hello.png</code></pre>-->
-            <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Upload</h2>
+                <h1 x-data="{ message: 'I ❤️ Wasabi' }" x-text="message"></h1>
+                <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Gallery</h2>
+                <a href="/origami/view">Link</a>
+                <!--            <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Curl</h2>-->
+                <!--            <pre><code>curl \-->
+                <!--  -F "data=@filter.edn" \-->
+                <!--  -F "data=@media.jpg" \-->
+                <!--  http://wasabi.hellonico.info/origami/image > hello.png</code></pre>-->
+                <h2 class="text-xl font-semibold text-gray-800 mt-8 mb-4">Upload</h2>
 
 
-            <form enctype='multipart/form-data' method="POST" action="/origami/form" class="my-6"
-                  x-data="{ files1: null, files2 : null }">
+                <form enctype='multipart/form-data' method="POST" action="/origami/form" class="my-6"
+                    x-data="{ files1: null, files2 : null }">
+                    <input type="text" name="tags" placeholder="Tags (comma separated)"
+                        class="border-2 border-gray-200 p-3 w-full block rounded my-2">
 
-                <label class="border-2 border-gray-200 p-3 w-full block rounded cursor-pointer my-2"
-                       for="customFile">
-                    <input name="customFile" type="file" class="sr-only" id="customFile"
-                           multiple="true" x-on:change="files1 = Object.values($event.target.files)">
-                    <span x-text="files1 ? files1.map(file => file.name).join(', ') : 'Choose image'"></span>
-                </label>
-                <label class="border-2 border-gray-200 p-3 w-full block rounded cursor-pointer my-2"
-                       for="customFile2">
-                    <input name="filter" type="file" class="sr-only" id="customFile2"
-                           x-on:change="files2 = Object.values($event.target.files)">
-                    <span x-text="files2 ? files2.map(file => file.name).join(', ') : 'Choose filter'"></span>
-                </label>
-                <button type="submit" class="bg-gray-300 text-gray-800 px-3 py-1 rounded">Submit</button>
-            </form>
+                    <label class="border-2 border-gray-200 p-3 w-full block rounded cursor-pointer my-2"
+                        for="customFile">
+                        <input name="customFile" type="file" class="sr-only" id="customFile" multiple="true"
+                            x-on:change="files1 = Object.values($event.target.files)">
+                        <span x-text="files1 ? files1.map(file => file.name).join(', ') : 'Choose image'"></span>
+                    </label>
+                    <label class="border-2 border-gray-200 p-3 w-full block rounded cursor-pointer my-2"
+                        for="customFile2">
+                        <input name="filter" type="file" class="sr-only" id="customFile2"
+                            x-on:change="files2 = Object.values($event.target.files)">
+                        <span x-text="files2 ? files2.map(file => file.name).join(', ') : 'Choose filter'"></span>
+                    </label>
+                    <button type="submit" class="bg-gray-300 text-gray-800 px-3 py-1 rounded">Submit</button>
+                </form>
 
+            </div>
         </div>
     </div>
-</div>
 </body>
+
 </html>
-
-
