--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -92,7 +92,7 @@
                 }
             }" x-init="init()">
 
-                <div style="border: 2px dashed #dbdbdb; min-height: 200px; display: flex; align-items: center; justify-content: center; border-radius: 8px; margin-bottom: 20px; cursor: pointer; position:relative; overflow: hidden;"
+                <div style="border: 2px dashed #dbdbdb; min-height: 200px; display: flex; align-items: center; justify-content: center; border-radius: 8px; margin-bottom: 20px; cursor: pointer; position:relative; overflow: hidden; background-color: #f8f9fa;"
                     class="hover:border-gray-400 transition"
                     :style="(hoveredFilter !== null) ? 'border-color: #0095f6;' : ''">
                     <input name="customFile" type="file" id="customFile"
@@ -106,13 +106,13 @@
                         <p style="color:#8e8e8e;">Drag photos here or click to select</p>
                     </div>
 
-                    <div x-show="preview"
-                        style="display:none; width:100%; height:100%; position: absolute; top:0; left:0;">
-                        <img :src="preview" style="width:100%; height:100%; object-fit: cover;">
+                    <div x-show="preview" style="width:100%; display: flex; justify-content: center;">
+                        <img :src="preview"
+                            style="max-width: 100%; max-height: 400px; width: auto; height: auto; object-fit: contain;">
                     </div>
 
                     <div x-show="hoveredFilter !== null"
-                        style="position:absolute; bottom:10px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.7); color:white; padding:4px 8px; border-radius:4px; font-size:12px; pointer-events:none;">
+                        style="position:absolute; bottom:10px; left:50%; transform:translateX(-50%); background:rgba(0,0,0,0.7); color:white; padding:4px 8px; border-radius:4px; font-size:12px; pointer-events:none; z-index: 20;">
                         Preview: <span x-text="hoveredFilter ? hoveredFilter.split('.').pop() : 'Normal'"></span>
                     </div>
                 </div>
